crates/gelx/tests/compile/macros/input_tuple.rs
use gelx::gelx;

fn main() {
	gelx!(example, "select <bool>$0");
}
